--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,14 +1,14 @@
-# Runs the all the tests written in the test folder.
+# Runs all the tests written in the test folder.
 
-# get flutter container
+# get a flutter container
 container:
-  image: cirrusci/flutter:latest
+  image: ghcr.io/cirruslabs/flutter:3.16.4
 
 
 # Analyzes and Lints the dart code according to analysis_options.yml
 analyze_task:
   name: Analyze and Lint
-  script: flutter analyze
+  script: dart analyze --fatal-infos
 
   
 test_task:
