--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -25,12 +25,11 @@ pr_test_task:
     folder: ./codecov
     fingerprint_script:
       - gpg --version
-      - sudo apt-get update | apt-get install gpg-agent
-      - curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --import # One-time step
+      - curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import # One-time step
       # - curl -Os https://uploader.codecov.io/latest/linux/codecov // THIS IS ADDED IN INSTALL_SCRIPT
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
-      - gpg --verify codecov.SHA256SUM.sig codecov.SHA256SUM
+      - gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
       - shasum -a 256 -c codecov.SHA256SUM
     install_script:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov
