--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -26,7 +26,7 @@ pr_test_task:
     fingerprint_script:
       - gpg --version
       - sudo apt-get update
-      - sudo apt-get install gpg-agent
+      - sudo apt-get install gpg-agent | Y
       - curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import # One-time step
       # - curl -Os https://uploader.codecov.io/latest/linux/codecov // THIS IS ADDED IN INSTALL_SCRIPT
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
