patch: chmod to codecov folder
Signed-off-by: Adithya Shetty <32545664+Maverick099@users.noreply.github.com>

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,8 +23,6 @@ pr_test_task:
     folder: ~/.pub-cache
   codecov_uploader_cache:
     folder: ./codecov
-    populate_script:
-      - curl -Os https://uploader.codecov.io/latest/linux/codecov
     fingerprint_script:
       - gpg --version
       - sudo apt-get update
@@ -34,6 +32,9 @@ pr_test_task:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
       - gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
       - shasum -a 256 -c codecov.SHA256SUM
+    populate_script:
+      - curl -Os https://uploader.codecov.io/latest/linux/codecov
+      - chmod +x codecov
   install_lcov_script: sudo apt-get install -y lcov
   test_script: flutter test --pub --null-assertions --coverage --coverage-path=test/coverage/report/lcov.info
   activate_coverage_script: dart pub global activate coverage
