--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,10 +22,8 @@ pr_test_task:
   pub_cache:
     folder: ~/.pub-cache
   codecov_uploader_cache:
-    folder: ./codecov
+    folder: ~/codecov
     fingerprint_script:
-      - gpg --version
-      - sudo apt-get update
       - echo Y | sudo apt-get install gpg-agent
       - curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import # One-time step
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
@@ -35,6 +33,7 @@ pr_test_task:
     populate_script:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov
       - chmod +x codecov
+    reupload_on_changes: true
   install_lcov_script: sudo apt-get install -y lcov
   test_script: flutter test --pub --null-assertions --coverage --coverage-path=test/coverage/report/lcov.info
   activate_coverage_script: dart pub global activate coverage
