--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -26,7 +26,7 @@ pr_test_task:
     fingerprint_script:
       - sudo apt-get update
       - echo Y | sudo apt-get install gpg-agent
-      - curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import # One-time step
+      - curl https://keybase.io/codecovsecurity/pgp_keys.asc | touch ~/.gnupg/trustedkeys.gpg | gpg --no-default-keyring --keyring trustedkeys.gpg --import # One-time step
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
       - gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
