--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -31,9 +31,10 @@ pr_test_task:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
       - ls -a 
+      - touch ~/.gnupg/trustedkeys.gpg
       - gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
       - shasum -h
-      - shasum -a 256 -c 'codecov.SHA256SUM'
+      - shasum -a 256 -c ./codecov.SHA256SUM -U
     populate_script:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov
       - chmod +x codecov
