--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -26,7 +26,6 @@ pr_test_task:
     fingerprint_script:
       - sudo apt-get update
       - echo Y | sudo apt-get install gpg-agent
-      - mkdir codecov
       - curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import 
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
@@ -34,7 +33,7 @@ pr_test_task:
       - touch ~/.gnupg/trustedkeys.gpg
       - gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
       - shasum -h
-      - shasum -a 256 -c ./codecov.SHA256SUM -U
+      - shasum -a 256 --check "./codecov.SHA256SUM" -U
     populate_script:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov
       - chmod +x codecov
