--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -30,7 +30,7 @@ pr_test_task:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
       - ls -a 
-      - gpgv codecov.SHA256SUM.sig codecov.SHA256SUM -v
+      - gpgv -v codecov.SHA256SUM.sig codecov.SHA256SUM
       - shasum -a 256 -c "codecov.SHA256SUM" -U
     populate_script:
       - curl -Os https://uploader.codecov.io/latest/linux/codecov
