--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -27,6 +27,7 @@ pr_test_task:
       - sudo apt-get update
       - echo Y | sudo apt-get install gpg-agent
       - curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import 
+      - curl -Os https://uploader.codecov.io/latest/linux/codecov
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
       - curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
       - ls -a 
