--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -37,9 +37,8 @@ pr_test_task:
       - chmod +x codecov
     reupload_on_changes: true
   install_lcov_script: sudo apt-get install -y lcov
+  generate_helper_file_script: chmod +x ./tool/scripts/dart-coverage-helper.sh ; sh ./tool/scripts/dart-coverage-helper.sh
   test_script: flutter test --pub --null-assertions --coverage --coverage-path=test/coverage/report/lcov.info
-  activate_coverage_script: dart pub global activate coverage
-  convert_to_lcov_script: dart pub global run coverage:format_coverage --packages=.dart_tool/package_config.json --report-on=lib --lcov -o ./test/coverage/report/lcov.info -i ./test/coverage/report/
   sanitize_lcov_report_script: lcov --remove test/coverage/report/lcov.info 'lib/*/*.g.dart' 'lib/*/*.part.dart' 'lib/generated/*.dart' 'lib/generated/*/*.dart' -o test/coverage/report/lcov.info 
   Rita_Repoter_script: ./codecov -t $CODEV_COV_TOKEN -f ./test/coverage/report/lcov.info
       
