--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,6 +8,7 @@ container:
 # Analyzes and Lints the dart code according to analysis_options.yml
 analyze_task:
   name: Analyze and Lint
+  skip: "!changesInclude('**.{dart}')"
   install_dependency_script: dart pub get
   format_code_script: dart format .
   analyze_code_script: dart analyze --fatal-infos
