--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -28,7 +28,7 @@ jobs:
   label_issues:
     runs-on: ubuntu-latest
     permissions:
-      issues: write-all
+      issues: write
     steps:
       - uses: actions/github-script@v7
         with:
